--- a/style.css
+++ b/style.css
@@ -5,120 +5,57 @@
 }
 
 body {
-    background-color: rgb(58, 58, 58);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: rgb(37, 37, 37);
+    color: rgb(255, 255, 255);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     height: 100vh;
-}
-
-.container_ingreso {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    gap: 5px;
+    justify-content: center;
+    gap: 20px;
+}
+
+.cuerpo_form {
     width: 60%;
 }
 
-#id_contraseña, .boton {
+.input, .button {
+    padding: 8px;
     border-radius: 8px;
-    padding: 5px 10px;
-}
-
-#id_contraseña {
     width: 100%;
 }
 
-.boton {
-    background-color: blue;
-    border: 1px solid blue;
-    color: aliceblue;
-    transition: .5s;
+.button {
+    background-color: rgb(34, 34, 235);
+    color: rgb(255, 255, 255);
+    border: 1px solid rgb(34, 34, 235);
+    font-weight: bold;
     width: 50%;
+    margin-top: 5px;
+    transition: .5s;
 }
 
-.boton:hover {
-    background-color: rgb(39, 39, 255);
-    border: 1px solid rgb(39, 39, 255);
+.button:hover {
+    background-color: rgb(52, 52, 237);
+    border: 1px solid rgb(52, 52, 237);
     cursor: pointer;
 }
 
-.back {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.81);
+.formulario {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    gap: 5px;
     align-items: center;
-    animation-name: mostrar;
-    animation-duration: 2s;
 }
 
-@keyframes mostrar {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+/* Validaciones */
+.error_input {
+    outline: 1px solid red;
+    border: 1px solid red;
+    background-color: rgb(255, 189, 189);
 }
 
-.container_respuesta {
-    background-color: aliceblue;
-    width: 60%;
-    height: 70px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 8px;
-}
-
-.fa-regular {
-    font-size: 40px;
-    animation: crecer 2, decrecer 2s 4s forwards;
-}
-
-@keyframes crecer {
-    0% {
-        font-size: 0px;
-    }
-    100% {
-        font-size: 40px;
-    }
-}
-
-@keyframes decrecer {
-    0% {
-        font-size: 40px;
-    }
-    100% {
-        font-size: 0px;
-    }
-}
-
-.ocultar {
-    display: none;
-    animation: esconder 2s, mostrar 2s 4s forwards;
-}
-
-@keyframes esconder {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
-}
-
-@keyframes mostrar {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+.error_input::placeholder {
+    color: red;
 }
